[gd_scene load_steps=7 format=3 uid="uid://cpp2noqeee87d"]

[ext_resource type="Script" uid="uid://c45uj2cegruq6" path="res://enemy/enemy.gd" id="1_cc7io"]
[ext_resource type="PackedScene" uid="uid://c27urcanyot1m" path="res://hit_box/hit_box.tscn" id="2_k3tft"]
[ext_resource type="PackedScene" uid="uid://bjolphmeflso6" path="res://enemy/gun.tscn" id="3_5sx8b"]
[ext_resource type="Texture2D" uid="uid://0njb5elvj2ue" path="res://shapes/orange_hexagon.png" id="4_k3tft"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1jl8q"]
radius = 180.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pmdwj"]

[node name="strong_Enemy" type="RigidBody2D"]
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_cc7io")
type = 2
speed = 80
health = 5

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_1jl8q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pmdwj")

[node name="HitBox" parent="." instance=ExtResource("2_k3tft")]

[node name="OrangeHexagon" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_k3tft")

[node name="Gun" parent="." instance=ExtResource("3_5sx8b")]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="hit_detected" from="HitBox" to="." method="_on_hit_box_hit_detected"]
